Release/0.5.0 (#21)
* Create a few sample graphs that roughly represent real refactorings #4

- Version bump.

* Create a few sample graphs that roughly represent real refactorings #4

- Enhancements for references to fields in code.

* Create a few sample graphs that roughly represent real refactorings #4

- Field Access representations.

* Create a few sample graphs that roughly represent real refactorings #4

- Identifier node.

* Create a few sample graphs that roughly represent real refactorings #4

- Java parsing (partial implementation).
- Package trees.

* Create a few sample graphs that roughly represent real refactorings #4

- Get node by path.

* Create a few sample graphs that roughly represent real refactorings #4

- Handle package trees.

* Create a few sample graphs that roughly represent real refactorings #4

- GraphJavaReader implementation enhancements.

* Create a few sample graphs that roughly represent real refactorings #4

- Include UML Class Diagram.

* Generate UML Class Diagrams with SVG #19 [GraphAdvice]

- Scaffolding for an SVG writer for UML Class Diagrams.

* Fix issues with reading multiple code files with `GraphJavaReader`.

* Javadoc fixes.

* Fix "adds" relation for Add Field microstep.

* Documentation.

* Pull Request feedback.

* Resource fix

---------

Co-authored-by: Ben Burgers <ben@benburgers.eu>